@@ -32,11 +32,12 @@
 #define NTC                     LOG_NOTICE    /* syslog 5 motion 6 */
 #define INF                     LOG_INFO      /* syslog 6 motion 7 */
 #define DBG                     LOG_DEBUG     /* syslog 7 motion 8 */
-#define ALL                     LOG_ALL       /* syslog 7 motion 9 */
+#define ALL                     LOG_ALL       /* syslog 8 motion 9 */
 #define LEVEL_DEFAULT           NTC           /* syslog 5 motion 6 default */
 #define SHOW_LEVEL_VALUE(x)     (x+1)
 
 /* Log types */
+#define TYPE_CORE               0             /* Core logs         */
 #define TYPE_STREAM             1             /* Stream logs       */
 #define TYPE_ENCODER            2             /* Encoder logs      */
 #define TYPE_NETCAM             3             /* Netcam logs       */
